src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dwU-dhF500-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: U\ndefault window height: F500\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]

post-map configures:
size: 0 × 500, bounds: 1231 × 680, states: []
size: 1 × 500, bounds: 1231 × 680, states: [Activated]
